test/libsolidity/syntaxTests/storageLayoutSpecifier/contract_named_at.sol
contract at layout at 0x1234ABC { }
// ----
// UnimplementedFeatureError 1834: (0-35): Code generation is not supported for contracts with specified storage layout base.
